--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -92,7 +92,7 @@
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<div class="me-top-app-bar__fake-size"></div>
+<!-- <div class="me-top-app-bar__fake-size"></div> -->
 
 <%= render partial: "layouts/app-top-bar" %>
 <%= render partial: 'components/tab-bar', locals: {props: {active: controller_name}} %>
