--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -16,14 +16,15 @@
   <section class="me-section">
     <div class="me-section__inner">
       <h2>Tópicos que você segue</h2>
-      <div class="is-horizontal-scrollable">
-        <%= render partial: 'components/follow/follow', locals: {
-          data: {
-            identifier: 'follows-by-user',
-            chips: @user.following_topics,
-            user:  @user
-          }
-        } %>
+      <div class="me-chip-set__wrapper">
+        <div class="me-chip-set mdc-chip-set">
+          <% current_user.following_topics.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
+            <a href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| current_user.last_sign_in_at < event.created_at } %>">
+              <%= topic.details_name.titleize %>
+              <i class="me-chip__counter"><%= topic.events.active.size %></i>
+            </a>
+          <% end %>
+        </div>
       </div>
     </div>
   </section>
