--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -107,6 +107,35 @@
           </span>
         <% end %>
       </section>
+      <section class="me-top-app-bar__section me-top-app-bar__section--middle mdc-top-app-bar__section">
+        <div class="me-search-field me-search-field mdc-text-field mdc-text-field--with-leading"
+             data-controller="search"
+             data-target="search.search"
+             data-turbolinks-permanent>
+          <form action="/busca"
+                method="get"
+                name="search"
+                style="width: 100%">
+            <i class="material-icons mdc-text-field__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path fill="none" d="M0 0h24v24H0V0z"/>
+                <path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+              </svg>
+            </i>
+            <input autocomplete="false"
+                   name="q"
+                   class="mdc-text-field__input"
+                   id="text-field-shape-one"
+                   placeholder="O que você está buscando hoje?"
+                   type="text"
+                   data-target="search.input">
+            <input class="me-button mdc-button"
+                   type="submit" value="Buscar"
+                   data-target="search.submit"
+                   data-action="click->search#searching"/>
+          </form>
+        </div>
+      </section>
     <% end %>
     <section
       class="me-top-app-bar__section me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
@@ -124,50 +153,6 @@
         <%= link_to root_path do %>
           <button class="me-button mdc-button mdc-button--unelevated">Quero um convite</button>
         <% end %>
-        <!--        <div class="me-top-app-bar__signin-link">-->
-        <!--          <span onclick="CacheModule.clearCache(); location.assign('/users/auth/google_oauth2')">Entrar</span>-->
-        <!--        </div>-->
-        <!--        <div class="g-signin2"-->
-        <!--             data-gapiscan="true"-->
-        <!--             data-onload="true"-->
-        <!--             data-onsuccess="onSuccess">-->
-        <!--          <div class="abcRioButton"-->
-        <!--               onclick="CacheModule.clearCache(); location.assign('/users/auth/google_oauth2')"-->
-        <!--               style="height:36px;width:185px;">-->
-        <!--            <div class="abcRioButtonContentWrapper">-->
-        <!--              <div class="abcRioButtonIcon" style="padding:8px">-->
-        <!--                <div style="width:18px;height:18px;"-->
-        <!--                     class="abcRioButtonSvgImageWithFallback abcRioButtonIconImage abcRioButtonIconImage18">-->
-        <!--                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="18px" height="18px"-->
-        <!--                       viewBox="0 0 48 48" class="abcRioButtonSvg">-->
-        <!--                    <g>-->
-        <!--                      <path fill="#EA4335"-->
-        <!--                            d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z">-->
-        <!--                      </path>-->
-        <!--                      <path fill="#4285F4"-->
-        <!--                            d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z">-->
-        <!--                      </path>-->
-        <!--                      <path fill="#FBBC05"-->
-        <!--                            d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z">-->
-        <!--                      </path>-->
-        <!--                      <path fill="#34A853"-->
-        <!--                            d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z">-->
-        <!--                      </path>-->
-        <!--                      <path fill="none" d="M0 0h48v48H0z"></path>-->
-        <!--                    </g>-->
-        <!--                  </svg>-->
-        <!--                </div>-->
-        <!--              </div>-->
-        <!--              <span class="abcRioButtonContents"-->
-        <!--                    style="font-size:13px;line-height:34px;">-->
-        <!--                <span-->
-        <!--                  id="not_signed_inri7nuxjddxks">Entrar com Google</span>-->
-        <!--                <span id="connectedri7nuxjddxks"-->
-        <!--                      style="display:none">Signed in</span></span>-->
-        <!--            </div>-->
-        <!--          </div>-->
-        <!--        </div>-->
-        <%# link_to "Entrar com o Google", user_google_oauth2_omniauth_authorize_path %>
       <% end %>
     </section>
   </div>
