--- a/web/app/assets/stylesheets/components/me-user-profile.scss
+++ b/web/app/assets/stylesheets/components/me-user-profile.scss
@@ -4,6 +4,10 @@
   align-items: center;
   margin: auto;
 
+  &.me-section {
+    padding: 24px 0;
+  }
+
   &__picture {
     border-radius: 100%;
     width: 80px;
@@ -11,7 +15,9 @@
   }
 
   &__name {
-    font-size: 36px;
-    margin: 12px 0 50px 0;
+    font-size: 26px;
+    font-weight: 900;
+    margin: 12px 0 12px 0;
+    font-family: $font-primary-family;
   }
 }
