Fix date diff in event component

--- a/web/app/assets/stylesheets/components/me-collection.scss
+++ b/web/app/assets/stylesheets/components/me-collection.scss
@@ -51,6 +51,7 @@
     @include mobile-only {
       padding: 0 $section-padding-phone;
       font-size: 11px;
+      display: none;
     }
 
     .me-page--profile & {
