Create users in app

--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -22,6 +22,26 @@
     </div>
   </div>
 
+  <div class="me-section">
+    <div class="me-section__inner">
+      <div class="me-user-suggestions">
+        <div class="me-user-suggestions__inner">
+          <% User.where("last_sign_in_at > ?", Date.today - 10.days).each do |user| %>
+          <div class="me-user-suggestions__user">
+            <div class="me-user-suggestions__picture">
+              <img src="<%= user.picture %>" alt="">
+            </div>
+            <div class="me-user-suggestions__name">
+              <%= link_to user.first_name, user_path(user) %>
+              <%= "Novo" if user.taste['events']['updated_at'] && current_user.last_sign_in_at.to_datetime < user.taste['events']['updated_at'].try(:to_datetime) %>
+            </div>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <% if current_user && current_user&.personas_assortment_finished? %>
     <section class="me-section">
       <div class="me-section__inner">
