Fix tab bar in desktop

--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -56,7 +56,7 @@
 
 <% if !mobile_device? &&
       controller_name == 'feeds' %>
-  <div class="me-tab-bar mdc-tab-bar" role="tablist">
+  <div class="me-tab-bar mdc-tab-bar" data-controller="tab-bar" data-target="tab-bar.tabBar" role="tablist">
     <div class="mdc-tab-scroller">
       <div class="mdc-tab-scroller__scroll-area">
         <div class="mdc-tab-scroller__scroll-content">
