Adjust in button component to use new material

--- a/web/app/assets/stylesheets/components/me-bot.scss
+++ b/web/app/assets/stylesheets/components/me-bot.scss
@@ -91,5 +91,6 @@
   right: 0;
   position: absolute;
   @include mdc-button-container-fill-color($brand-color);
+  @include mdc-button-ink-color($surface-color);
   font-family: $font-primary-family;
 }
