--- a/web/app/assets/stylesheets/components/me-user-profile.scss
+++ b/web/app/assets/stylesheets/components/me-user-profile.scss
@@ -17,7 +17,20 @@
   &__name {
     font-size: 26px;
     font-weight: 900;
-    margin: 12px 0 12px 0;
+    margin: 12px 0 0 0;
     font-family: $font-primary-family;
+  }
+
+  &__follow-button {
+    margin: 12px 0 0 0;
+  }
+
+  &__follow-counter {
+    margin: 6px 0 0 0;
+    font-size: 10px;
+  }
+
+  &__followers {
+    margin: 12px 0 0 0;
   }
 }
