--- a/web/app/views/components/collection/_similar.html.erb
+++ b/web/app/views/components/collection/_similar.html.erb
@@ -51,8 +51,8 @@
       Tópicos parecidos com os do <%= link_to(limit_name_size(event.details['name'], 60), event_path(event)) %>
     </h3>
 
-    <div class="me-similar__organizers">
-      <%= render partial: 'components/follow/follow', locals: {
+<!--    <div class="me-similar__organizers">-->
+      <%#= render partial: 'components/follow/follow', locals: {
           data: {
               chips:             similar_events.map { |similar| similar.organizers[0..3] }.flatten.uniq[0..6].sort,
               user:              current_user,
@@ -61,7 +61,7 @@
               expand_to_similar: true
           }
       } %>
-    </div>
+<!--    </div>-->
 
   </div>
 <% end %>
