Add collection of followd users in feed

--- a/web/app/assets/stylesheets/components/me-section.scss
+++ b/web/app/assets/stylesheets/components/me-section.scss
@@ -51,6 +51,9 @@
         width: 100% !important;
       }
     }
+    .me-section--with-padding & {
+      padding: $section-padding-phone;
+    }
   }
 
   & h2 {
