--- a/web/app/assets/stylesheets/components/me-user-suggestions.scss
+++ b/web/app/assets/stylesheets/components/me-user-suggestions.scss
@@ -1,28 +1,39 @@
 .me-user-suggestions {
+  .me-collection__title-custom & {
+    padding: 0 0 12px 0;
+  }
 
   &__inner {
     display: grid;
     grid-template-columns: minmax(40px, 1fr);
     grid-auto-flow: column;
     grid-gap: 0 12px;
-    padding: 0px 24px;
+    padding: 0 24px;
     width: max-content;
   }
 
   &__user {
-    width: 40px;
+    width: 50px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    .me-collection__title-custom & {
+      width: 36px;
+    }
   }
 
   &__picture {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     overflow: hidden;
-    background: $surface-secondary-color;
     border-radius: 100%;
+    background-color: $surface-secondary-color;
+    background-size: cover;
+    .me-collection__title-custom & {
+      width: 36px;
+      height: 36px;
+    }
     & img {
       width: 100%;
       height: auto;
