Adjust style of button search component

--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -60,9 +60,10 @@ $box-shadow: 0 0 45px rgba(0, 0, 0, 0.20);
     font-size: 12px;
     @include mdc-button-ink-color($font-secondary-color);
     @include mdc-button-container-fill-color($surface-color);
-    // color: $font-secondary-color;
-    border: 1px solid $font-secondary-color;
     padding: 3px 6px;
+    @include mobile-only {
+      border: 1px solid $font-secondary-color;
+    }
     &:hover {
       @include mdc-button-ink-color($brand-color);
       border: 1px solid $brand-color;
